Fixed the space width
The font had a really weird space width but now it's actually monospace (and you can read it)

--- a/ASMR/style.css
+++ b/ASMR/style.css
@@ -1,9 +1,8 @@
 @font-face {
     font-family: asmr;
-    src: url(ASMR-Regular.ttf);
+    src: url(ASMRmono-Regular.ttf);
 }
 
 body{
     font-family: asmr;
-    
 }
